js/js.translator/testData/incremental/invalidation/typeScriptExportsPerFile/main/m.d.ts
type Nullable<T> = T | null | undefined
declare function KtSingleton<T>(): T & (abstract new() => any);
export declare function box(stepId: number, isWasm: boolean): string;